--- a/uploader/index.html
+++ b/uploader/index.html
@@ -21,7 +21,11 @@
 					<li>Those files will now upload to the device.</li>
 					<li>Soon, these images will start appearing on the device.</li>
 				</ol>
-				<form action="/upload" class="dropzone" id="image_dropzone"></form>
+				<form action="/upload" class="dropzone" id="image_dropzone">
+					<div class="fallback">
+						<input name="file" type="file" multiple />
+					</div>
+				</form>
 			</div>
 		</section>
 	</div>
