Uploader removes complete files, only accepts valid files
This should improve the initial uploading process, which may suffer
from out-of-memory issue in a browser if complete uploads remain.

--- a/uploader/index.html
+++ b/uploader/index.html
@@ -18,7 +18,7 @@
 				<h2><strong>Phototype image uploader</strong></h2>
 				<ol>
 					<li>Drag and drop image files onto this browser window.</li>
-					<li>Those files will now upload to the device.</li>
+					<li>Those files will now upload to the device. <span id="upload_counter"></span></li>
 					<li>Soon, these images will start appearing on the device.</li>
 				</ol>
 				<form action="/upload" class="dropzone" id="image_dropzone">
